# bindl

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/bindl/: __main__.py  config.py  download.py  github.py  helpers.py  http_source.py  lib.py  models.py
src/bindl/config/: config.py  source_config.py  target_config.py
